--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,11 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
   </head>
 
-  <body>
+  <body ng-controller="AppController as appCtrl">
   <p>my-fullstack-seed</p>
+
+    <!-- Application content -->
+    <div ui-view></div>
+
   </body>
 </html>
