build: Inject required scripts into 'index.html'
Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/index.html
+++ b/client/index.html
@@ -14,5 +14,8 @@
     <!-- Application content -->
     <div ui-view></div>
 
+    <script src="app/app.js"></script>
+    <!-- injector:js:begin -->
+    <!-- injector:js:end -->
   </body>
 </html>
