build: Inject bower dependencies into 'index.html'
Include scripts and stylesheets.

Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,9 @@
     <title>A Simple Fullstack Application</title>
     <meta name="description" content="">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
+
+    <!-- injector:bower.css:begin -->
+    <!-- injector:bower.css:end -->
   </head>
 
   <body ng-controller="AppController as appCtrl">
@@ -13,6 +16,9 @@
 
     <!-- Application content -->
     <div ui-view></div>
+
+    <!-- injector:bower.js:begin -->
+    <!-- injector:bower.js:end -->
 
     <script src="app/app.js"></script>
     <!-- injector:js:begin -->
