build: Inject stylesheets into 'index.html'
Include any stylesheet available in the sources.
However, styles defined in 'stylus' take precedence.

Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,8 @@
 
     <!-- injector:bower.css:begin -->
     <!-- injector:bower.css:end -->
-
+    <!-- injector:css:begin -->
+    <!-- injector:css:end -->
     <link rel="stylesheet" href="app/app-compiled.css"/>
   </head>
 
