build: Add task 'stylus'
Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,8 @@
 
     <!-- injector:bower.css:begin -->
     <!-- injector:bower.css:end -->
+
+    <link rel="stylesheet" href="app/app-compiled.css"/>
   </head>
 
   <body ng-controller="AppController as appCtrl">
